--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@theguild/remark-mermaid": "^0.3.0",
+    "katex": "^0.16.27",
     "next": "16.1.4",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
     "nextra": "^4.6.1",
-    "nextra-theme-docs": "^4.6.1"
+    "nextra-theme-docs": "^4.6.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3"
   }
 }
